# scango_library_test

./: CMakeLists.txt  README.md  dcf_cmdid.h  dcf_i_rcc_dth.h  dcf_pkghelper.h  scangodll_test.cpp
.github/workflows/: cmake-single-platform.yml
include/: scango_dll.h
lib/: libSCANGO_Dll.dylib
